--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,3 +1,7 @@
 Payment state info
 Fix css lecture
-Fix css homepage
+Fix css homepage, Width/Height
+Footer
+More components
+Ta bort onödiga filer
+ISAC: ShowCourses lägg till /
